<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_input">Add Item</string>
    <string name="card_title">Enter Requirement Details</string>
    <string name="input_item">Enter Item Name</string>
    <string name="input_quantity">Enter Quantity</string>
    <string name="input_color">Enter Color</string>
    <string name="input_size">Enter Size</string>
    <string name="save_text">Save</string>
    <string name="delete_confirmation_text">Delete Confirmation</string>
    <string name="delete_ques_text">Are you sure you want to delete the item?</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="update_text">Update</string>
</resources>